--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 
 .canvas-container {
-    max-width: 500px;
+    text-align: center;
+    /*max-width: 800px;*/
     display: flex;
     width: 40%;
 }
+ .container {
+     margin-left: 30px;
+ }
